--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,11 +1,11 @@
 # API URL
-REACT_APP_API_URL=https://chessmn.onrender.com
+REACT_APP_API_URL=https://chessmn-backend.onrender.com
 
 # Firebase Configuration (to be replaced with actual values in Netlify dashboard)
-REACT_APP_FIREBASE_API_KEY=AIzaSyC_T_YoLCCdN5BSGQJSGAIZBNbbk8CxPPw
-REACT_APP_FIREBASE_AUTH_DOMAIN=chessmn-de373.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=chessmn-de373
-REACT_APP_FIREBASE_STORAGE_BUCKET=chessmn-de373.firebasestorage.app
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=262841945863
-REACT_APP_FIREBASE_APP_ID=1:262841945863:web:c4eb5e7d3ae40cdcedbfa2
-REACT_APP_FIREBASE_MEASUREMENT_ID=G-SN0WCJQCCY
+REACT_APP_FIREBASE_API_KEY=your-api-key
+REACT_APP_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=your-project-id
+REACT_APP_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
+REACT_APP_FIREBASE_APP_ID=your-app-id
+REACT_APP_FIREBASE_MEASUREMENT_ID=your-measurement-id
