--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.2.1",
+    "firebase": "^10.8.0",
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
