--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,5 +1,5 @@
 # API URL
-REACT_APP_API_URL=https://chessmn-backend.onrender.com
+REACT_APP_API_URL=https://chessmn.onrender.com
 
 # Firebase Configuration (to be replaced with actual values in Netlify dashboard)
 REACT_APP_FIREBASE_API_KEY=your-api-key
