--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   base = "frontend"
   publish = "build"
   command = "npm install && npm run build"
+  
+  [build.environment]
+    CI = "false"
 
 [[redirects]]
   from = "/*"
